--- a/401-reading-05-06.md
+++ b/401-reading-05-06.md
@@ -1,2 +1,14 @@
 # Read: 06 - Inheritance and Interfaces
 
+## Review of Objects and Classes
+  Objects is the idea behind OOP (object-oriented programming), that all things are modeled like real world objects - "things" that have properties and do things. And all objects live within classes, that can be extended, instantiated, and customized accordingly as the programmer builds out (or in).
+  
+## Inheritance
+
+  Objects created directly from a Class are of _that_ class. But, you want to make a new class that is similar, and shares many of the same states and functions, you can
+  > class __NEW CLASS__ extends __SUPER CLASS__
+now the __NEW CLASS__ takes on all variables of the __SUPER CLASS__. _But_, you need to be careful: all those properties from the superclass are not written into the subclass, so documentation that follows the new class and outlines what it *inherited* from the superclass is readily available.
+
+## Interface
+
+  
