--- a/401-reading-05-06.md
+++ b/401-reading-05-06.md
@@ -11,4 +11,6 @@ now the __NEW CLASS__ takes on all variables of the __SUPER CLASS__. _But_, you 
 
 ## Interface
 
-  
+ > An interface is a group of related methods with empty bodies.
+
+These interfaces then become the means with which to manipulate and edit objects of that specific class.
