--- a/CF401/401-reading-05-06.md
+++ b/CF401/401-reading-05-06.md
@@ -8,6 +8,7 @@
   Objects created directly from a Class are of _that_ class. But, you want to make a new class that is similar, and shares many of the same states and functions, you can
   > class __NEW CLASS__ extends __SUPER CLASS__
 now the __NEW CLASS__ takes on all variables of the __SUPER CLASS__. _But_, you need to be careful: all those properties from the superclass are not written into the subclass, so documentation that follows the new class and outlines what it *inherited* from the superclass is readily available.
+Above quote from [here](https://docs.oracle.com/javase/tutorial/java/IandI/subclasses.html)
 
 ## Interface
 
